package eng.jAtcSim.newLib.area.approaches.behaviors;

public interface IApproachBehavior {
}
