package eng.jAtcSim.newLib.area.approaches.conditions;

public interface ICondition {
  ICondition createCopy();
}
