package eng.jAtcSim.newLib.area.approaches.conditions;

import eng.eSystem.collections.*;

import static eng.eSystem.utilites.FunctionShortcuts.*;

public class RunwayThresholdVisibilityCondition implements ICondition {
}
